IS-18: Added createdBy and updatedBy properties to tasks and posts create and update endpoints. Updated swagger docs to include correct definitions and responses. Added preliminary pieces of the documentation in preparation for building the external api calls.
