# src/models/Post.js
@@ -9,6 +9,13 @@ const postSchema = mongoose.Schema({
         type: String,
         required: true
     },
+    createdBy: {
+        type: String,
+        required: true
+    },
+    updatedBy: {
+        type: String
+    },
     date: {
         type: Date,
         default: Date.now
